--- a/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
+++ b/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
@@ -142,33 +142,21 @@
     <!-- Resources Table Desktop only -->
     <div class="flow-root h-full w-full">
       <div class="flex flex-col mb-4 w-full">
-        <!-- Filters -->
-        <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
+         <!-- Filters -->
+         <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
           <div class="flex flex-col sm:flex-row w-full">
             <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
-              <div class="w-1/2 mr-3">
-                <label class="text-gray-400" for="from">Cliente:</label>
-                <input
-                  name="from"
-                  class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
-                  type="date"
-                />
-              </div>
               <div class="w-1/2">
-                <label class="text-gray-400" for="to">Sede:</label>
-                <input
-                  name="to"
-                  class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
-                  type="date"
-                />
-              </div>
-            </div>
-            <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-1/2">
-              <!-- Filter button -->
-              <div class="flex items-end">
-                <button class="btn-primary hover:bg-green-900 mx-5 xl:my-0">
-                  <span>Filtrar</span>
-                </button>
+                <label class="text-gray-400" for="office">Sede:</label>
+                <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
+                  class="w-full bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand">
+                  <ng-container *ngIf="client !== undefined && client !== null">
+                    <option [value]="''">Todos</option>
+                    <option [ngValue]="office.name" *ngFor="let office of client.offices">
+                      {{office.name}}
+                    </option>
+                  </ng-container>
+                </select>
               </div>
             </div>
           </div>
@@ -193,14 +181,13 @@
               <th>Nombres</th>
               <th>Apellidos</th>
               <th>Correo electrónico</th>
-              <th>Fecha </th>
               <th>Cliente</th>
               <th>Sede</th>
               <th>Actualizar</th>
             </tr>
           </thead>
           <tbody>
-            <ng-container *ngFor="let user of client.users; let i = index">
+            <ng-container *ngFor="let user of users; let i = index">
               <tr
                 [ngClass]="{ 'bg-gray-200': i % 2 === 0 }"
                 class="text-center"
@@ -214,10 +201,9 @@
                     />
                   </label>
                 </td>
-                <td class="p-2">{{ user.firstName }}</td>
+                <td class="p-2"><img class="w-12 mx-auto mb-12" src="{{user.photo}}" alt="{{ user.firstName }}"></td>
                 <td class="p-2">{{ user.firstName }}</td>
                 <td class="p-2">{{ user.lastName }}</td>
-                <td class="p-2">{{ user.email }}</td>
                 <td class="p-2">{{ user.email }}</td>
                 <td class="p-2">{{ user.client }}</td>
                 <td class="p-2">{{ user.office }}</td>
@@ -230,6 +216,7 @@
                       user.id,
                       'editar'
                     ]"
+                    
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 m-auto cursor-pointer focus:outline-none hover:text-green-900"
                     fill="none"
