--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -330,7 +330,7 @@
               class="w-42 btn-primary"
               (click)="submitForm()"
             >
-              Actualizar
+              Crear
               <svg
                 *ngIf="loader$ | async"
                 xmlns="http://www.w3.org/2000/svg"
