--- a/src/app/clients/client-list/client-list.component.html
+++ b/src/app/clients/client-list/client-list.component.html
@@ -209,7 +209,7 @@
 <!-- End Modal to add Domain -->
 
 <!-- Modal to list Domains -->
-<div *ngIf="showDomainListBackDrop" class="fixed inset-0 z-10 overflow-y-auto" aria-labelledby="modal-title"
+<div *ngIf="showDomainListBackDrop" class="fixed inset-0 z-10 overflow-y-auto opacity-100" aria-labelledby="modal-title"
   role="dialog" aria-modal="true">
   <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:items-end sm:block sm:p-0">
     <div class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75" aria-hidden="true"></div>
