--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -107,6 +107,17 @@
     <a *ngIf="isOpen" class="hidden sm:flex" routerLink="aprobaciones">Aprobaciones</a>
   </div>
   <!-- End Link -->
+  <!-- Link -->
+  <div [ngClass]="{'justify-center': !isOpen}"
+    class="flex w-full space-x-4 text-lg text-white cursor-pointer hover:text-green-900">
+    <svg routerLink="clientes" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 outline-none focus:outline-none"
+      fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+    </svg>
+    <a *ngIf="isOpen" class="hidden sm:flex" routerLink="reservas">Reservas</a>
+  </div>
+  <!-- End Link -->
 
 </div>
 <!-- End Side Nav -->
