--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -76,7 +76,7 @@
         >
           <!-- CEDULA -->
           <div class="flex flex-col w-full h-16">
-            <label class="text-gray-400" for="sede">* Cédula:</label>
+            <label class="text-gray-400" for="cedula">* Cédula:</label>
             <input
               name="documentNumber"
               formControlName="documentNumber"
@@ -152,24 +152,23 @@
         >
           <!-- SEDE -->
           <div class="flex flex-col w-full h-16">
-            <label class="text-gray-400" for="sede">* Sede:</label>
-            <input
-              name="sede"
+            <label class="text-gray-400" for="sede">* Sedes:</label>
+            <select
               formControlName="sede"
+              name="sede"
+              id="sede"
               required
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-              [ngClass]="{
-                'border-solid border-red-500 outline-red-500':
-                  UserGroup.get('sede')?.touched &&
-                  UserGroup.get('sede')?.hasError('required')
-              }"
-              type="text"
-            />
+            >
+              <option [ngValue]="offi.name" *ngFor="let offi of office">
+                {{offi.name}}
+              </option>
+            </select>
           </div>
           <!-- MEDIO DE TRANSPORTE -->
           <div class="flex flex-col w-full h-16">
             <label class="text-gray-400" for="transPrin">
-              * Medio de tranposrte principal:
+              * Medio de transporte principal:
             </label>
             <input
               name="transPrin"
@@ -191,7 +190,7 @@
           <!-- MEDIO DE TRANSPORTE SECUNDARIO -->
           <div class="flex flex-col w-full h-16">
             <label class="text-gray-400" for="transSec">
-              * Medio de tranposrte secundario:
+              * Medio de transporte secundario:
             </label>
             <input
               name="transSec"
@@ -271,18 +270,22 @@
             <label class="text-gray-400" for="grupoSanguineo">
               * Grupo sanguineo:
             </label>
-            <input
-              name="grupoSanguineo"
+            <select
               formControlName="grupoSanguineo"
+              name="grupoSanguineo"
               required
+              autocomplete="grupoSanguineo"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
-              [ngClass]="{
-                'border-solid border-red-500 outline-red-500':
-                  UserGroup.get('grupoSanguineo')?.touched &&
-                  UserGroup.get('grupoSanguineo')?.hasError('required')
-              }"
-              type="text"
-            />
+            >
+              <option>O-</option>
+              <option>O+</option>
+              <option>A+</option>
+              <option>A-</option>
+              <option>B-</option>
+              <option>B+</option>
+              <option>AB-</option>
+              <option>AB+</option>
+            </select>
           </div>
           <!-- EPS -->
           <div class="flex flex-col w-full h-16">
@@ -306,12 +309,12 @@
         >
           <!-- SEXO -->
           <div class="flex flex-col w-full h-16">
-            <label class="text-gray-400" for="grupoSanguineo">* Sexo:</label>
+            <label class="text-gray-400" for="sexo">* Sexo:</label>
             <select
-              formControlName="grupoSanguineo"
-              name="grupoSanguineo"
+              formControlName="sexo"
+              name="sexo"
               required
-              autocomplete="grupoSanguineo"
+              autocomplete="sexo"
               class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand"
             >
               <option>Masculino</option>
@@ -330,9 +333,8 @@
               class="w-42 btn-primary"
               (click)="submitForm()"
             >
-              Crear
+              Actualizar
               <svg
-                *ngIf="loader$ | async"
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-4 h-4 animate-spin"
                 fill="none"
