--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -119,10 +119,9 @@
         <div class="flex flex-col mb-4 w-11/12 lg:w-10/12 lg:flex-row">
           <div class="flex flex-col sm:flex-row w-full">
             <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
-              <div class="w-1/2">
-                <label class="text-gray-400" for="office">Sede:</label>
+                <label class="text-gray-400 mx-3" for="office">Sede:</label>
                 <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
-                  class="w-full bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand">
+                  class="w-1/2 bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand">
                   <ng-container *ngIf="client !== undefined && client !== null">
                     <option [value]="''">Todos</option>
                     <option [ngValue]="office.name" *ngFor="let office of client.offices">
@@ -130,7 +129,14 @@
                     </option>
                   </ng-container>
                 </select>
-              </div>
+
+                <label class="text-gray-400 mx-3" for="documentNumber">Cédula:</label>
+                <input name="documentNumber" [(ngModel)]="documentNumber" required id="documentNumber" (ngModelChange)="filterResourcesCC()"
+                class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text" />
+            </div>
+
+            <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
+                
             </div>
           </div>
         </div>
