[USERS] - Filtro cédula

--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -120,7 +120,7 @@
           <div class="flex flex-col sm:flex-row w-full">
             <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
                 <label class="text-gray-400 mx-3" for="office">Sede:</label>
-                <select name="office" [(ngModel)]="office" required id="office" (ngModelChange)="filterResources()"
+                <select name="office" [(ngModel)]="office" id="office" (ngModelChange)="filterResources()"
                   class="w-1/2 bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand">
                   <ng-container *ngIf="client !== undefined && client !== null">
                     <option [value]="''">Todos</option>
@@ -131,7 +131,7 @@
                 </select>
 
                 <label class="text-gray-400 mx-3" for="documentNumber">Cédula:</label>
-                <input name="documentNumber" [(ngModel)]="documentNumber" required id="documentNumber" (ngModelChange)="filterResourcesCC()"
+                <input name="documentNumber" [(ngModel)]="documentNumber" id="documentNumber" (ngModelChange)="filterResourcesCC()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text" />
             </div>
 
