--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -55,7 +55,7 @@
 
 
         <!-- create new user button -->
-        <button
+        <!-- <button
           *ngIf="showAddBtn"
           class="btn-primary hover:bg-green-900 mx-5"
           [disabled]="downloading"
@@ -77,7 +77,7 @@
               d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
             />
           </svg>
-        </button>
+        </button> -->
       </div>
       <!-- End Action Buttons -->
     </div>
@@ -159,6 +159,7 @@
               <th>Foto</th>
               <th>Nombres</th>
               <th>Apellidos</th>
+              <th>Cédula</th>
               <th>Correo electrónico</th>
               <th>Cliente</th>
               <th>Sede</th>
@@ -183,6 +184,7 @@
                 <td class="p-2"><img class="w-12 mx-auto mb-12" src="{{user.photo}}" alt="{{ user.firstName }}"></td>
                 <td class="p-2">{{ user.firstName }}</td>
                 <td class="p-2">{{ user.lastName }}</td>
+                <td class="p-2">{{ user.documentNumber }}</td>
                 <td class="p-2">{{ user.email }}</td>
                 <td class="p-2">{{ user.client }}</td>
                 <td class="p-2">{{ user.office }}</td>
