--- a/src/app/clients/user-form/user-form.component.html
+++ b/src/app/clients/user-form/user-form.component.html
@@ -333,7 +333,7 @@
               class="w-42 btn-primary"
               (click)="submitForm()"
             >
-              Actualizar
+              {{title}}
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="w-4 h-4 animate-spin"
