--- a/src/app/clients/user-list/user-list.component.html
+++ b/src/app/clients/user-list/user-list.component.html
@@ -150,8 +150,11 @@
               <th class="p-2">
                 <label class="flex items-center space-x-3" for="checked">
                   <input
-                    name="checked"
+                    name="masterSelected"
                     type="checkbox"
+                    [(ngModel)]="masterSelected"
+                    (change)="checkUncheckAll()"
+                    value="all"
                     class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
                   />
                 </label>
@@ -175,8 +178,11 @@
                 <td class="p-2">
                   <label class="flex items-center space-x-3" for="checked">
                     <input
-                      name="checked"
+                      name="idSel"
                       type="checkbox"
+                      [(ngModel)]="user.isSelected"
+                      (change)="isAllSelected()"
+                      value="{{ user.id }}"
                       class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
                     />
                   </label>
