--- a/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
+++ b/src/app/clients/users/inactive-user-list/inactive-user-list.component.html
@@ -123,8 +123,11 @@
               <th class="p-2">
                 <label class="flex items-center space-x-3" for="checked">
                   <input
-                    name="checked"
+                    name="masterSelected"
                     type="checkbox"
+                    [(ngModel)]="masterSelected"
+                    (change)="checkUncheckAll()"
+                    value="all"
                     class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
                   />
                 </label>
@@ -148,10 +151,13 @@
                 <td class="p-2">
                   <label class="flex items-center space-x-3" for="checked">
                     <input
-                      name="checked"
-                      type="checkbox"
-                      class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
-                    />
+                    name="idSel"
+                    type="checkbox"
+                    [(ngModel)]="user.isSelected"
+                    (change)="isAllSelected()"
+                    value="{{ user.id }}"
+                    class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
+                  />
                   </label>
                 </td>
                 <td class="p-2"><img class="w-12 mx-auto mb-12" src="{{user.photo}}" alt="{{ user.firstName }}"></td>
