--- a/src/app/booking/booking-list/booking-list.component.html
+++ b/src/app/booking/booking-list/booking-list.component.html
@@ -1,3 +1,59 @@
+<!-- HEADER -->
+<div class="flex justify-between mt-12 mb-12 sm:m-0 pr-4 sm:mb-4 flex-col">
+
+  <!-- Title line -->
+  <div class="flex flex-row justify-between">
+    <!-- Title -->
+    <div class="flex items-center space-x-2 sm:space-x-4">
+      <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-6 w-6 sm:w-12 sm:h-12 text-brand"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="2"
+        d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2"
+      />
+    </svg>
+      <h1 class="font-bold text:2xl sm:text-5xl">{{title}}</h1>
+    </div>
+    
+    <!-- End Title -->
+    <!-- Action Buttons -->
+    <div class="flex flex-row">
+      
+      <!-- Download button -->
+      <button (click)="onDownloadExcel()" class="btn-primary hover:bg-green-900 mx-5"
+        [disabled]="downloading" [ngClass]="{'opacity-40 cursor-wait': downloading}">
+        <span class="hidden sm:flex">Descargar</span>
+        <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+          *ngIf="downloading" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+          </path>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+          *ngIf="!downloading">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+        </svg>
+      </button>
+    </div>
+    <!-- End Action Buttons -->
+  </div>
+  <!-- End title line -->
+
+</div>
+<!-- End header -->
+
+<!-- BODY -->
+<div class="h-full overflow-y-scroll">
+
 <div class="flex flex-col items-center justify-center space-y-4 py-14 px-4 sm:w-full h-full mt-4">
 
 
@@ -13,7 +69,7 @@
           <!-- Client -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="client">Cliente:</label>
-            <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="selectClient()"
+            <select name="client" [(ngModel)]="client" id="client" (ngModelChange)="filterResources()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
               <option [value]="''">Todos</option>
               <ng-container *ngFor="let client of clients$ | async">
@@ -41,13 +97,13 @@
           <div class="flex flex-row flex-1 my-3 lg:my-0 mx-4 w-full sm:w-1/2">
             <div class="w-1/2 mr-3">
               <label class="text-gray-400" for="from">Desde:</label>
-              <input name="from" [(ngModel)]="from"
+              <input name="from" [(ngModel)]="from" (ngModelChange)="filterResources()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
                 type="date">
             </div>
             <div class="w-1/2">
               <label class="text-gray-400" for="to">Hasta:</label>
-              <input name="to" [(ngModel)]="to"
+              <input name="to" [(ngModel)]="to" (ngModelChange)="filterResources()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand w-full"
                 type="date">
             </div>
@@ -57,13 +113,13 @@
           <!-- Referencia -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="referncia">Referencia:</label>
-            <input name="reference" [(ngModel)]="reference"
+            <input name="reference" [(ngModel)]="reference" (ngModelChange)="filterResources()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
           </div>
           <!-- cedula -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="cedula">Cédula:</label>
-            <input name="reference" [(ngModel)]="reference"
+            <input name="reference" [(ngModel)]="document" (ngModelChange)="filterResources()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
           </div>
         </div>
@@ -71,20 +127,14 @@
           <!-- Calificación servicio -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="cal-servicio">Calificación servicio:</label>
-            <input name="cal-servicio" [(ngModel)]="reference"
+            <input name="cal-servicio" [(ngModel)]="calificacion" (ngModelChange)="filterResources()"
                 class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
           </div>
           <!-- Pasó tiempo entrega -->
           <div class="flex flex-col flex-1 my-3 lg:my-0 mx-4 w-full">
             <label class="text-gray-400" for="office">Pasó tiempo entrega:</label>
-            <input name="paso-entrega" [(ngModel)]="reference"
+            <input name="paso-entrega" [(ngModel)]="tiempoEntrega" (ngModelChange)="filterResources()"
             class="bg-gray-100 rounded-md focus:ring-brand focus:outline-none focus:border-brand" type="text">
-          </div>
-           <!-- Filter button -->
-           <div class="flex items-end">
-            <button class="btn-primary hover:bg-green-900 mx-5 xl:my-0" (click)="filterResources()">
-              <span>Filtrar</span>
-            </button>
           </div>
         </div>
       </div>
@@ -95,15 +145,6 @@
         class="hidden w-full text-xs text-center table-auto sm:table sm:text-lg overflow-x-scroll overflow-y-scroll">
         <thead>
           <tr>
-            <td class="p-2">
-              <label class="flex items-center space-x-3" for="checked">
-                <input
-                  name="checked"
-                  type="checkbox"
-                  class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
-                />
-              </label>
-            </td>
             <th>Fecha</th>
             <th>Cédula</th>
             <th>Cliente</th>
@@ -118,17 +159,8 @@
           </tr>
         </thead>
         <tbody>
-          <ng-container *ngFor="let resource of (resources$|async); let i = index;">
+          <ng-container *ngFor="let resource of booking; let i = index;">
             <tr [ngClass]="{'bg-gray-200': i % 2 === 0}" class="text-center">
-              <td class="p-2">
-                <label class="flex items-center space-x-3" for="checked">
-                  <input
-                    name="checked"
-                    type="checkbox"
-                    class="w-6 h-6 border border-gray-300 rounded-md appearance-none cursor-pointer form-tick checked:border-brand checked:border-transparent focus:outline-none checked:bg-brand focus:bg-brand"
-                  />
-                </label>
-              </td>
               <td class="p-2">
                 <span *ngIf="resource.repairs.length">
                   {{resource.repairs[resource.repairs.length-1].createdAt|date}}
@@ -137,12 +169,8 @@
                   ---
                 </span>
               </td>
-              <td class="p-2"> <span *ngIf="resource.repairs.length">
-                  {{calcDays(resource.repairs[resource.repairs.length-1].createdAt)}}
-                </span>
-                <span *ngIf="!resource.repairs.length">
-                  0
-                </span>
+              <td class="p-2">
+                  123456
               </td>
               <td class="p-2"> {{resource.client}} </td>
               <td class="p-2"> {{resource.office}} </td>
@@ -150,7 +178,7 @@
               <td class="p-2"> {{resource.reference}} </td>
               <td class="p-2"> {{resource.office}} </td>
               <td class="justify-center p2">
-                {{resource.status? resourceStatusNames[resource.status] : ''}}
+                0
               </td>
               <td class="justify-center p-2">
                 <span class="cursor-pointer focus:outline-none text-brand hover:text-green-900"
@@ -177,23 +205,6 @@
         <app-loader></app-loader>
       </div>
       <!-- End loader -->
-
-      <!-- Pagination -->
-      <div class="justify-end flex-row flex">
-        Pag. {{page}}
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 outline-none focus:outline-none  mx-2" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor"
-          [ngClass]="{'text-brand hover:text-green-900 cursor-pointer': page > 1}"
-          (click)="changePage(page-1, 'previous')">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-        </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 outline-none focus:outline-none mx-2"
-          [ngClass]="{'text-brand hover:text-green-900 cursor-pointer': (((resources$ |async)?.length !== 0))}"
-          fill="none" viewBox="0 0 24 24" stroke="currentColor" (click)="changePage(page+1, 'following')">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
-        </svg>
-      </div>
-      <!-- End pagination -->
 
     </div>
     <!-- End Resource Table Desktop only -->
@@ -229,7 +240,7 @@
   <!-- No Resources -->
   <div *ngIf="((resources$ |async)?.length === 0) && !(loader$ | async) && page === 1"
     class="flex flex-col items-center justify-center w-full h-full space-y-4">
-    <p>No hay reparaciones pendientes</p>
+    <p>No hay reservas pendientes</p>
   </div>
   <!-- End No Resources -->
 
@@ -375,3 +386,4 @@
   </div>
 </div>
 <!-- End Modal to list viajes -->
+</div>
